// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangePasswordForm Renders correctly When failed to save a profile 1`] = `
<Form
  as="form"
  data-test="changePasswordForm"
  error={true}
  loading={false}
  success={false}
>
  <FormField
    required={true}
  >
    <label>
      <Interpolate
        className=""
        i18nKey="userProfile.password.original"
      />
    </label>
    <input
      autoFocus={true}
      name="original"
      onChange={[Function]}
      required={true}
      type="password"
    />
  </FormField>
  <FormField
    required={true}
  >
    <label>
      <Interpolate
        className=""
        i18nKey="userProfile.password.new1"
      />
    </label>
    <input
      name="new1"
      onChange={[Function]}
      required={true}
      type="password"
    />
  </FormField>
  <FormField
    required={true}
  >
    <label>
      <Interpolate
        className=""
        i18nKey="userProfile.password.new2"
      />
    </label>
    <input
      name="new2"
      onChange={[Function]}
      required={true}
      type="password"
    />
  </FormField>
  <ChangePasswordFormErrorMessage
    errorCode="oops"
  />
  <Button
    as="button"
    onClick={[Function]}
    primary={true}
    role="button"
  >
    <Interpolate
      className=""
      i18nKey="userProfile.password.save"
    />
  </Button>
</Form>
`;

exports[`ChangePasswordForm Renders correctly When passwords are mismatched 1`] = `
<Form
  as="form"
  data-test="changePasswordForm"
  error={true}
  loading={false}
  success={false}
>
  <FormField
    required={true}
  >
    <label>
      <Interpolate
        className=""
        i18nKey="userProfile.password.original"
      />
    </label>
    <input
      autoFocus={true}
      name="original"
      onChange={[Function]}
      required={true}
      type="password"
    />
  </FormField>
  <FormField
    required={true}
  >
    <label>
      <Interpolate
        className=""
        i18nKey="userProfile.password.new1"
      />
    </label>
    <input
      name="new1"
      onChange={[Function]}
      required={true}
      type="password"
    />
  </FormField>
  <FormField
    required={true}
  >
    <label>
      <Interpolate
        className=""
        i18nKey="userProfile.password.new2"
      />
    </label>
    <input
      name="new2"
      onChange={[Function]}
      required={true}
      type="password"
    />
  </FormField>
  <ChangePasswordFormErrorMessage
    errorCode="passwordMismatch"
  />
  <Button
    as="button"
    disabled={true}
    onClick={[Function]}
    primary={true}
    role="button"
  >
    <Interpolate
      className=""
      i18nKey="userProfile.password.save"
    />
  </Button>
</Form>
`;

exports[`ChangePasswordForm Renders correctly When successfully saved a profile 1`] = `
<Form
  as="form"
  data-test="changePasswordForm"
  loading={false}
  success={true}
>
  <FormField
    required={true}
  >
    <label>
      <Interpolate
        className=""
        i18nKey="userProfile.password.original"
      />
    </label>
    <input
      autoFocus={true}
      name="original"
      onChange={[Function]}
      required={true}
      type="password"
    />
  </FormField>
  <FormField
    required={true}
  >
    <label>
      <Interpolate
        className=""
        i18nKey="userProfile.password.new1"
      />
    </label>
    <input
      name="new1"
      onChange={[Function]}
      required={true}
      type="password"
    />
  </FormField>
  <FormField
    required={true}
  >
    <label>
      <Interpolate
        className=""
        i18nKey="userProfile.password.new2"
      />
    </label>
    <input
      name="new2"
      onChange={[Function]}
      required={true}
      type="password"
    />
  </FormField>
  <ChangePasswordFormSuccessMessage />
  <Button
    as="button"
    onClick={[Function]}
    primary={true}
    role="button"
  >
    <Interpolate
      className=""
      i18nKey="userProfile.password.save"
    />
  </Button>
</Form>
`;

exports[`ChangePasswordForm Renders correctly When viewing a blank form 1`] = `
<Form
  as="form"
  data-test="changePasswordForm"
  loading={false}
  success={false}
>
  <FormField
    required={true}
  >
    <label>
      <Interpolate
        className=""
        i18nKey="userProfile.password.original"
      />
    </label>
    <input
      autoFocus={true}
      name="original"
      onChange={[Function]}
      required={true}
      type="password"
    />
  </FormField>
  <FormField
    required={true}
  >
    <label>
      <Interpolate
        className=""
        i18nKey="userProfile.password.new1"
      />
    </label>
    <input
      name="new1"
      onChange={[Function]}
      required={true}
      type="password"
    />
  </FormField>
  <FormField
    required={true}
  >
    <label>
      <Interpolate
        className=""
        i18nKey="userProfile.password.new2"
      />
    </label>
    <input
      name="new2"
      onChange={[Function]}
      required={true}
      type="password"
    />
  </FormField>
  <Button
    as="button"
    disabled={false}
    onClick={[Function]}
    primary={true}
    role="button"
  >
    <Interpolate
      className=""
      i18nKey="userProfile.password.save"
    />
  </Button>
</Form>
`;
